--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,19 +20,19 @@ services:
 
   # minimal container that builds the ratelimit service binary and exits.
   ratelimit-build:
-    image: golang:1.21.5-alpine
+    image: golang:1.23-alpine
     working_dir: /go/src/github.com/envoyproxy/ratelimit
     command: go build -o /usr/local/bin/ratelimit ./src/service_cmd/main.go
     volumes:
-      - .:/go/src/github.com/envoyproxy/ratelimit
+      - /c/Dev/ratelimit:/go/src/github.com/envoyproxy/ratelimit
       - binary:/usr/local/bin/
 
   ratelimit-client-build:
-    image: golang:1.21.5-alpine
+    image: golang:1.23-alpine
     working_dir: /go/src/github.com/envoyproxy/ratelimit
     command: go build -o /usr/local/bin/ratelimit_client ./src/client_cmd/main.go
     volumes:
-      - .:/go/src/github.com/envoyproxy/ratelimit
+      - /c/Dev/ratelimit:/go/src/github.com/envoyproxy/ratelimit
       - binary:/usr/local/bin/
 
   ratelimit:
